home.css
@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');

* {
    margin: 0;
}

body {
    font-family: 'Inter', sans-serif;
}

main {
    display: flex;
    justify-content: center;
    gap:40px;
}

nav {
    background-color: #B0FFD3;
    display: flex;
    justify-content: flex-start;
    padding: 20px;
    margin-bottom: 30px;;
}

nav h1 {
    color: #36454F;
}

.left-side {
    display: grid;
    grid-template-areas: "income income"
                         "needs wants"
                         "savings misc";
    gap: 20px;
    background-color: #F8FAFB;
    border-radius: 20px;
    padding: 20px;
    width: 710px;
    height: 868px;
    & .income {
        width: fit-content;
        height: 37px;
        grid-area: income;
        display: flex;
        flex-direction: row;
        background-color: #B0FFD3;
        padding: 10px;
        border-radius: 10px;
        justify-content: center;
        margin-bottom: -60px;
        & h2 {
            color: #36454F;
            display: flex;
            align-self: center;
        }
    }
    & .needs {
        grid-area: needs;
        width: 318px;

    }
    & .wants {
        grid-area: wants;
        width: 318px;
    }
    & .savings {
        grid-area: savings;
        width: 318px;

    }
    & .misc {
        grid-area: misc;
        width: 318px;
    }
}

.right-side {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

.second-line, .third-line {
    display: flex;
    justify-content: space-around;
    margin-top: 20px;
    gap: 30px;
}

.income-details {
    display: flex;
    flex-direction: row;
    gap: 5px;
    margin-left: 20px;
    & > #income-frequency {
        padding: 10px;
    }
}

.income-details input, select {
    border-radius: 10px;
    display: flex;
}

.income-details select {
    margin-left: 20px;
}

.income-details label {
    align-self: center;
    background-color: white;
    padding: 10px;
    width: fit-content;
    border-radius: 10px;
    border: solid 1px rgb(163, 163, 163);
    text-align: left;
    float: right;
}



.income-details p {
    display: flex;
    align-items: center;
    font-size: 20px;
    color: #36454F;
}

.needs-var, .wants-var, .savings-var {
    display:flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background-color: #B0FFD3;
    border-top-right-radius: 10px;
    border-top-left-radius: 10px;
    padding: 10px;
}

[src="images/minus.png"] {
    height: 5px;
}

.needs-inputs, .wants-inputs, .savings-inputs {
    display: flex;
    flex-direction: column;
    background-color: #d4fce8;
    gap: 10px;

    & > article {
        display: flex;
        align-items: center;
        padding-left: 10px;
        border-top: solid white;
        padding-top:5px;
    }
}

.custom-expense-section {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 328px;
}

.custom-expense-section .input-fields {
    margin-right: -10px;
}

.needs-inputs input, .wants-inputs input, .savings-inputs input, .custom-expense-section #custom-amount {
    width: 119px;
    height: 29px;
    border-radius: 15px;
    border: solid 1px rgba(98, 96, 96, 0.47);
    margin-right: 20px;
}

.entertainment, .hobbies, .clothing, .eating-out, .travel {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

button {
    background-color: #d4fce8;
    border: none;
    text-align:right;
    cursor: pointer;
}

.add-expense {
    display: flex;
    justify-content: flex-end;
    background-color: #d4fce8;
    align-items:center;
    gap: 5px;
    padding: 10px;
}

.retirement, .college-savings, .emergency-fund, .housing, .utilities, .food, .healthcare, .loans {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 30px;
}

.third-line {
    padding-right: 100px;
}

.graph {
    width: 510px;
    height: 510px;
}

.summary {
    display: flex;
    flex-direction: row;
    background-color: #F8FAFB;
    padding: 15px;
    border-radius: 20px;
    margin-top: 10%;
    & .summary-left {
        display: grid;
        grid-template-areas: "monthly monthly annual annual"
                             "needs wants savings misc"
                             "remaining . . .";
        gap: 10px 50px;
        & .label-month {
            grid-area: monthly;
        }
        & .label-annual {
            grid-area: annual;
        }
        & .label-needs {
            grid-area: needs;
        }
        & .label-wants {
            grid-area: wants;
        }
        & span {
            display: flex;
            margin-top: 5px;
        }
    }

    & .summary-right {
        display: flex;
        flex-direction: column;
        align-items: center;
        gap: 50px;
        margin-left:57px;

        & > p {
            padding-left: 30px;
            padding-right: 30px;
        }
        & > .values {
            display: flex;
            flex-direction: row;
            gap:20px;
            

            & > section {
                display: flex;
                flex-direction: column;
                gap: 5px;
            }
        }
    }
}

#spending-needs, #spending-wants, #spending-savings, #spending-misc {
    margin-top: -10px;
    color: #FF5A5A;
    font-weight: bold;
}

#spending-remaining-summary {
    margin-top: -10px;
    color: #6BFFAE;
    text-decoration: none;
    font-weight: bold;
}

#spending-remaining-chart {
    margin-top: -10px;
    color: #6BFFAE;
    text-decoration: none;
    font-weight: bold;
}

#span-wants, #span-needs, #span-savings, #span-misc, #span-remainging, #span-monthly, #span-annual {
    border-bottom: solid 1.5px;
    padding-right: 15px;
    padding-bottom: 2px;
}

#rule-needs, #rule-wants, #rule-savings {
    color: #FF5A5A;
    font-weight: bold;
}

#span2-wants, #span2-needs, #span2-savings {
    border-bottom: solid 1.5px;
    padding-right: 15px;
    padding-bottom: 2px;
}

.label {
    border-bottom: solid 1.5px;
    padding-bottom: 2px;
}

#summmary-gross-monthly-income, #summary-gross-annual-income {
    margin-top: -10px;
    font-weight: bold;
}

.housing, .utilities, .food, .healthcare, .loans, .entertainment, .hobbies, .clothing, .eating-out, .travel, .retirement, .college-savings, .emergency-fund {
    font-size: 14px;
    font-weight: 600;
    width: 318px;
    height: 39px;
}


@media screen and (max-width: 500px) {
    nav h1 {
        text-align: center;
        width: 100%;
    }

    main {
        display: flex;
        flex-direction: column;
        gap: 30px;
        align-content: center;
    }

    .needs {
        margin-top: 0px;
    }
}

